支持多模版选择
加入多模版的选择

--- a/app/templates/src/_index_1.html
+++ b/app/templates/src/_index_1.html
@@ -24,7 +24,7 @@
 		</div>
 		<div class="user_info fr">
 			<div class="user_tit">
-				<span class="tit_txt">欢迎你，</span><span class="user_name">卡普拉爱睡觉</span><i class="qz_vip_icon_m qz_vip_icon_m_7"></i><img src="http://ctc.qzonestyle.gtimg.cn/ac/qzone_v5/client/year_vip_icon.png" width="16" height="16" style="vertical-align: text-bottom;">
+				<span class="tit_txt">欢迎你，</span><span class="user_name"><%=author%></span><i class="qz_vip_icon_m qz_vip_icon_m_7"></i><img src="http://ctc.qzonestyle.gtimg.cn/ac/qzone_v5/client/year_vip_icon.png" width="16" height="16" style="vertical-align: text-bottom;">
 			</div>
 			<a href="javascript:;" class="logout">[退出]</a>
 		</div>
