--- a/app/templates/src/_index_2.html
+++ b/app/templates/src/_index_2.html
@@ -9,7 +9,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link href="http://ctc.qzonestyle.gtimg.cn/qz-act/public/mobile/mobile_act_global.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" href="csss/<%= projectName%>.css">
+    <link rel="stylesheet" href="css/<%= projectName%>.css">
 <body>
 	<!-- log和登录信息 开始 -->
 	<div class="act_toolbar">
