--- a/app/templates/src/qz-act-pc/index.html
+++ b/app/templates/src/qz-act-pc/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>QQ空间活动</title>
 	<link href="http://qzonestyle.gtimg.cn/qz-act/public/toolbar/style.css" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" type="text/css" href="css/<%= projectName%>.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script type="text/javascript" src="http://qzonestyle.gtimg.cn/qz-act/js/jquery-2.0.3.min.js"></script>
 </head>
 <body>
@@ -56,6 +56,6 @@
 	</p>
 </div>
 <!-- 版权 End -->
-<script type="text/javascript" src="js/<%= projectName%>.js"></script>
+<script type="text/javascript" src="js/common.js"></script>
 </body>
 </html>
