--- a/app/templates/src/wy-share-mobile/index.html
+++ b/app/templates/src/wy-share-mobile/index.html
@@ -4,12 +4,12 @@
 	<meta http-equiv="X-UA-Compatible" content="edge">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>空白文本文档</title>
+	<title>test sync</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 <div style="text-align:center;font-size:30px; padding:100px;">
-	<p>Hi <span><%=author%></span>,此模版是由哥斯拉自动创建!</p>
+	<p>Hi <span>Godzilla</span>,此模版是由哥斯拉自动创建!</p>
 </div>
 <script type="text/javascript" src="js/common.js"></script>
 </body>
